tests/lean/t4.lean.expected.out
N : Type
a : N
Prop → Prop : Type
F : Type → Type
F : Type → Type
f : N → N → N
len : Π (A : Type) (n : N), vec A n → N
B → B : Prop
A → A : Type
C : Type
t4.lean:25:6: error: unknown identifier 'A'
R : Type → Prop
λ (x y : N), x : N → N → N
N
N
N
M
tst.M : Type
foo.M : Type
M : Type
t4.lean:48:6: error: unknown identifier 'M'
ok
Declarations:
tst.M
tst.N
N
a
F
R
len
vec
f
Prop
foo.M
-------------
